--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="blue">#0B0C63</color>
     <color name="blue_dark">#080942</color>
     <color name="blue_light">#3033A9</color>
+    <color name="green">#388E3C</color>
     <color name="verify">#DBDBDB</color>
     <color name="gray">#333333</color>
     <color name="red">#F44336</color>
