--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -38,9 +38,10 @@
         </FrameLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -72,5 +73,16 @@
                 android:textSize="12sp"
                 tools:text="2 hours ago" />
         </LinearLayout>
+        
+        <ImageButton
+            android:id="@+id/dismissButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="top"
+            android:layout_marginStart="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Dismiss notification"
+            android:src="@drawable/ic_close"
+            app:tint="@color/gray" />
     </LinearLayout>
 </androidx.cardview.widget.CardView> 
